--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,28 @@ body {
   color: var(--color-text);
   font-family: Verdana, Geneva, sans-serif;
 }
+
+
+.input, 
+.button, 
+.a,
+.textarea,
+.select {
+  all: revert;
+}
+
+.default-font {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+.error-text {
+  @apply text-[10px] text-red-500 font-bold ml-2;
+}
+
+.link-2 {
+  @apply text-black hover:underline
+}
+
+.belowHeaderContainer {
+  @apply md:w-[95vw] lg:w-[80vw] bg-foreground mx-auto pl-4;
+}
