--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,6 @@
   --color-muted: #828282;
 }
 
-
 body {
   background: var(--color-background);
   color: var(--color-text);
@@ -25,6 +24,7 @@ body {
   all: revert;
 }
 
+
 .default-font {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
@@ -39,4 +39,12 @@ body {
 
 .belowHeaderContainer {
   @apply md:w-[95vw] lg:w-[80vw] bg-foreground mx-auto pl-4;
+}
+
+.link-2:hover {
+  text-decoration: underline;
+}
+
+.text-muted {
+  color: #6b7280;
 }
